# capa-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
capa/: __init__.py  _version.py
capa/_internal/: __init__.py  adaptive_quality_system.py  continuous_improvement_system.py  intelligent_landmark_system.py  measurement_calibrator.py  pose_validation_system.py  suppress_warnings.py  validation_standards.py
capa/analyzers/: __init__.py  core_analyzer.py  multi_angle_analyzer.py  results_integrator.py
capa/modules/: __init__.py  forehead_analyzer.py  morphology_analyzer.py  neoclassical_canons.py  wd_analyzer.py
docs/: api_reference.md  configuration.md  examples.md  getting_started.md  index.md  scientific_foundation.md
examples/: basic_analysis.py  individual_modules.py  multi_angle_analysis.py
tests/: __init__.py  conftest.py  test_canon_fixes.py  test_core_analyzer.py  test_landmark_detectors.py  test_modules.py  test_morphology_fixes.py  test_multi_angle.py  test_wd_fixes.py
