[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capa-sdk"
version = "1.1.0"
description = "CAPA - Craniofacial Analysis & Prediction Architecture SDK"
readme = "README.md"
license = {text = "Proprietary - Dual License (Non-Commercial Free / Commercial Paid)"}
requires-python = ">=3.9"
authors = [
    {name = "CAPA Team"}
]
keywords = [
    "craniofacial",
    "facial-analysis",
    "biometrics",
    "computer-vision",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "dlib>=19.22.0",
    "mediapipe>=0.10.0",
    "face-recognition>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yarel2l/capa-sdk"
Documentation = "https://github.com/yarel2l/capa-sdk#readme"
Repository = "https://github.com/yarel2l/capa-sdk"
Issues = "https://github.com/yarel2l/capa-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["capa*"]

[tool.setuptools.package-data]
capa = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
